End of evening commit